[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mcp"
version = "0.1.0"
description = "MCP server for RAG over a collection of HTTP(S) documents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ayourtch" }]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "pypdf>=4.0.0",
    "fastembed>=0.4.0",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
rag-mcp = "rag_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["rag_mcp"]
